Add keywords to package.json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   "engine": {
     "node": "6.10.0"
   },
+  "keywords": [
+    "aws",
+    "lambda",
+    "ec2",
+    "node",
+    "slack"
+  ],
   "author": "kitakitabauer <kitakita.d.kitakita@gmail.com (https://github.com/kitakitabauer)",
   "license": "MIT"
 }
